# har-file-sanitiser

./: .gitignore  README.md  har.py  har_sanitiser.py  pyproject.toml  requirements.txt  setup.py
examples/: custom_config.json  example_config.json  example_usage.py  sample.har
src/har_sanitiser/: __init__.py  cli.py  core.py  utils.py
tests/fixtures/: sample.har
tests/unit/: test_config_options.py  test_har_sanitiser.py  test_har_sanitiser_improved.py
