[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "har-file-sanitiser"
version = "1.0.0"
description = "A tool for sanitising HAR files to safely prepare browser logs for sharing"
readme = "README.md"
authors = [
    {name = "grounzero", email = "user@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["har", "http", "archive", "sanitise", "privacy"]
dependencies = [
    "ijson>=3.1.4",
    "tqdm>=4.64.0",
]

[project.urls]
"Homepage" = "https://github.com/grounzero/har-file-sanitiser"
"Bug Tracker" = "https://github.com/grounzero/har-file-sanitiser/issues"

[project.scripts]
har-sanitiser = "har_sanitiser.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["har_sanitiser"]